--- a/src/app/delnote/delnote.component.css
+++ b/src/app/delnote/delnote.component.css
@@ -38,3 +38,7 @@ mat-footer-row mat-footer-cell{
             height: 32px;
             width: 32px;
         }
+
+.set-apart {
+    margin-top: 30px;
+    }
