--- a/src/app/delnote/delnote.component.html
+++ b/src/app/delnote/delnote.component.html
@@ -2,6 +2,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
 <div class="DelNotes">
+  
+  <mat-progress-spinner *ngIf="showSpinner" [color]="primary" [mode]="indeterminate"></mat-progress-spinner>
+  
   <div class="search-div">
     <button mat-raised-button (click)="createDelNote()">
       <mat-icon>add</mat-icon>Create
@@ -105,6 +108,6 @@
       <mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':listData!=null}"></mat-footer-row>
       <mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(listData!=null && listData.data.length==0)}"></mat-footer-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+    <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator> -->
   </div>
 </div>
