--- a/src/app/delorder/delorder.component.html
+++ b/src/app/delorder/delorder.component.html
@@ -1,93 +1,69 @@
 <h4>Customer Order</h4>
 <div class="container">
-<section class="order-form">
-  <form (ngSubmit)="onSave()" [formGroup]="orderform" class="order-form">
+  <section class="order-form">
+    <form (ngSubmit)="onSave()" [formGroup]="orderform" class="order-form">
+      
+      <mat-progress-spinner *ngIf="showSpinner" [color]="primary" [mode]="indeterminate"></mat-progress-spinner>
+      
+      <mat-grid-list cols="6" rowHeight="200px">
+        <mat-grid-tile colspan="1">
+          <div class="containercol1">
+            <mat-form-field class="orderhead">
+              <input matInput [matDatepicker]="picker" [max]="maxDate" placeholder="Order Date" formControlName="DelOrdDate">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
 
-  <mat-grid-list cols="6" rowHeight="200px">
-    <mat-grid-tile colspan="1">
-      <div class="containercol1">
-        <mat-form-field class="orderhead">
-          <input
-            matInput
-            [matDatepicker]="picker"
-            [max]="maxDate"
-            placeholder="Order Date"
-            formControlName="DelOrdDate">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-        <mat-form-field class="orderhead">
-          <input
-            matInput
-            placeholder="Customer Reference *"
-            formControlName="CustRef">
-        </mat-form-field>
-      </div>
-    </mat-grid-tile>
+              <div class="set-apart">
+                <app-select-client-mat-table (focusout)="onCustRefFocutOut()" formControlName="CustRef" [dataSource]="this">
+                </app-select-client-mat-table>
+              </div>
+          </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile colspan="2">
-      <div class="containercol2" dir="ltr" fxLayoutGap="20px" fxLayoutAlign="start start">
-        <mat-form-field class="orderhead" style="width: 380px;">
-            <textarea
-              matInput
-              rows="5"
-              placeholder="Client *"
-              formControlName="Client">
+        <mat-grid-tile colspan="2">
+          <div class="containercol2" dir="ltr" fxLayoutGap="20px" fxLayoutAlign="start start">
+            <mat-form-field class="orderhead" style="width: 380px;">
+              <textarea matInput rows="5" placeholder="Client *" formControlName="Client">
             </textarea>
-        </mat-form-field>
+            </mat-form-field>
 
-        <mat-form-field class="orderhead">
-            <input
-              matInput
-              placeholder="Town *"
-              formControlName="Town">
-        </mat-form-field>
+            <mat-form-field class="orderhead">
+              <input matInput placeholder="Town *" formControlName="Town">
+            </mat-form-field>
 
-      </div>
-    </mat-grid-tile>
+          </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile colspan="2">
-      <div class="containercol3" dir="ltr" fxLayoutGap="20px" fxLayoutAlign="start start">
-        <mat-form-field class="orderhead">
-            <input
-              matInput
-              placeholder="Sender Message"
-              formControlName="DefSendMsg">
-        </mat-form-field>
-        <mat-form-field class="orderhead">
-            <input
-              matInput
-              placeholder="Delivery Instructions"
-              formControlName="DelInstructions">
-        </mat-form-field>
-        <mat-form-field class="orderhead">
-            <input
-              matInput
-              placeholder="InvoiceRef *"
-              formControlName="InvoiceRef">
-        </mat-form-field>
-        <mat-form-field class="orderhead">
-            <input
-              matInput
-              placeholder="Status"
-              formControlName="Status"
-              >
-        </mat-form-field>
-      </div>
-    </mat-grid-tile>
+        <mat-grid-tile colspan="2">
+          <div class="containercol3" dir="ltr" fxLayoutGap="20px" fxLayoutAlign="start start">
+            <mat-form-field class="orderhead">
+              <input matInput placeholder="Sender Message" formControlName="DefSendMsg">
+            </mat-form-field>
+            <mat-form-field class="orderhead">
+              <input matInput placeholder="Delivery Instructions" formControlName="DelInstructions">
+            </mat-form-field>
+            <mat-form-field class="orderhead">
+              <input matInput placeholder="InvoiceRef *" formControlName="InvoiceRef">
+            </mat-form-field>
+            <mat-form-field class="orderhead">
+              <input matInput placeholder="Status" formControlName="Status">
+            </mat-form-field>
+          </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile colspan="1">
-      <div class="containercol4">
-        <button mat-raised-button color="primary" [disabled]="!orderform.valid">Save</button>
-      </div>
-    </mat-grid-tile>
+        <mat-grid-tile colspan="1">
+          <div class="containercol4">
+            <button mat-raised-button color="primary" [disabled]="!orderform.valid">Save</button>
+          </div>
+        </mat-grid-tile>
 
-  </mat-grid-list>
+      </mat-grid-list>
 
-  </form>
-</section>
+    </form>
+  </section>
 
-<hr>
+  <hr>
 
 </div>
 
