Enabled print delivery notes whilst creating delivery order

--- a/src/app/delnote/docselect/docselect.component.html
+++ b/src/app/delnote/docselect/docselect.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <section class="docselect-form">
-    <form (ngSubmit)="onSave()" [formGroup]="docselectform" class="docselect-form">
+    <form [formGroup]="docselectform" class="docselect-form">
       <div class="docSelection">
-        <mat-checkbox formControlName="CheckBoxDelNote" color="primary" class="requests">Delivery
+        <mat-checkbox formControlName="CheckBoxDelNote" (click)="toggledelnote()" color="primary" class="requests">Delivery
           Note</mat-checkbox>
 
-        <mat-checkbox formControlName="CheckBoxLabel" color="primary" class="requests">Label</mat-checkbox>
+        <mat-checkbox formControlName="CheckBoxLabel" (click)="togglelabel()" color="primary" class="requests">Label</mat-checkbox>
       </div>
       <div>
-        <button mat-raised-button color="accent">Print</button>
-        <button mat-raised-button color="primary">Cancel</button>
+        <button mat-raised-button (click)="onPrint()" color="accent">Print</button>
+        <button mat-raised-button (click)="onCancel()" color="primary">Cancel</button>
       </div>
     </form>
   </section>
