added cusotmer code search by name or code to delorder

--- a/src/app/delorder/delorder.component.css
+++ b/src/app/delorder/delorder.component.css
@@ -40,3 +40,15 @@ h4 {
     width: 40%;
     padding: 5%;    
  }
+
+ .searchcodename-section {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 40px;
+    font-size: 12px;
+  }
+  
+ .searchcodename-margin {
+    margin: 5px;
+ }
