--- a/src/app/shared_prints/labeldoc/labeldoc.component.html
+++ b/src/app/shared_prints/labeldoc/labeldoc.component.html
@@ -34,12 +34,12 @@
             <table class="container3">
                 <tr>
                     <td style="vertical-align: top;">
-                        <div>
+                        <div style="width: 20px;">
                             <h6>To:</h6>
                         </div>
                     </td>
                     <td>
-                        <div>
+                        <div style="text-align: left; width: 350px;">
                             <h6 #receiverName>01234567890123456789012345678901234567890123456789</h6>
                             <h6 #receiverAdd1>01234567890123456789012345678901234567890123456789</h6>
                             <h6 #receiverAdd2>01234567890123456789012345678901234567890123456789</h6>
