updated delnotedoc to reflect delivery requests

--- a/src/app/shared_prints/delnotedoc/delnotedoc.component.html
+++ b/src/app/shared_prints/delnotedoc/delnotedoc.component.html
@@ -156,15 +156,12 @@
           <td style="text-align:left; padding-left:20px;width:35%; vertical-align: text-top;">
             <section>
               <div>
-                  <h5 style="text-decoration: underline; ">Delivery Requests</h5>
+                  <h5 style="text-decoration: underline; ">{{delreqTitle}}</h5>
               <!--<h5 #delRequestDiary>Diary</h5>
                   <h5 #delRequestCard>Card</h5>
                   <h5 #delRequestCalendar>Calendar</h5>
                   <h5 #delRequestOther>Other</h5> -->
-                <textarea #delRequests rows="5" cols="30" style="border:0px; text-align: left; padding-left:10px;">line1
-line2
-line3
-line4
+                <textarea #delRequests rows="5" cols="30" style="border:0px; text-align: left; padding-left:10px;">
                 </textarea>
               </div>
             </section>
