Implemented validations on excel sheet and DelNoteCrud

--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -33,7 +33,7 @@
           </mat-grid-tile>
           <mat-grid-tile>
             <mat-form-field class="delnotehead">
-              <input matInput placeholder="Delivery Time" formControlName="DelNoteDeliveryTime">
+              <input matInput placeholder="Delivery Time / Instructions" formControlName="DelNoteDeliveryTime">
             </mat-form-field>
           </mat-grid-tile>
           <mat-grid-tile>
