--- a/src/app/delnote/dellist/dellist.component.html
+++ b/src/app/delnote/dellist/dellist.component.html
@@ -8,18 +8,20 @@
       <mat-grid-tile colspan="4">
         <div class="search-div">
           <mat-form-field class="search-form-field" floatLabel="never">
-            <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
+            <input matInput [(ngModel)]="searchKey" placeholder="Delivery Notes Search" autocomplete="off" (keyup)="applyFilter()">
             <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
               <mat-icon>close</mat-icon>
             </button>
           </mat-form-field>
         </div>
       </mat-grid-tile>
-      <mat-grid-tile colspan="1">
-        <button mat-icon-button (click)="onRefresh()">
-          <mat-icon>refresh</mat-icon>
-        </button>
-      </mat-grid-tile>
+      <div *ngIf="showRefreshData">
+        <mat-grid-tile colspan="1">
+          <button mat-icon-button (click)="onRefresh()">
+            <mat-icon>refresh</mat-icon>
+          </button>
+        </mat-grid-tile>
+      </div>
     </mat-grid-list>
   </div>
   <div class="mat-elevation-z8">
