New order remember delnotes sender details and msg

--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -49,13 +49,13 @@
         <div class="Detail1">
           <mat-grid-tile>
             <mat-form-field class="delnotedetail1">
-              <textarea matInput rows="5" placeholder="Sender" formControlName="SenderNameAddr">
+              <textarea matInput rows="5" placeholder="Sender Address" formControlName="SenderNameAddr">
               </textarea>
             </mat-form-field>
           </mat-grid-tile>
           <mat-grid-tile>
             <mat-form-field class="delnotedetail1">
-              <textarea matInput rows="5" placeholder="Receiver" formControlName="ReceivNameAddr">
+              <textarea matInput rows="5" placeholder="Receiver Address" formControlName="ReceivNameAddr">
               </textarea>
             </mat-form-field>
           </mat-grid-tile>
