--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -66,7 +66,7 @@
         <div class="Detail2">
           <mat-grid-tile>
             <mat-form-field class="delnotedetail2">
-              <input matInput placeholder="Town" formControlName="SendTown" required>
+              <input matInput placeholder="Town" formControlName="SendTown">
             </mat-form-field>
             <mat-form-field class="delnotedetail2">
               <input matInput placeholder="Sender Message" formControlName="SendMessage">
