--- a/src/app/delorder/delorder.component.html
+++ b/src/app/delorder/delorder.component.html
@@ -38,32 +38,33 @@
             </mat-form-field>
 
             <mat-form-field class="orderhead">
-              <input matInput placeholder="Town *" formControlName="Town">
+              <input matInput placeholder="Town" formControlName="Town">
             </mat-form-field>
 
           </div>
         </mat-grid-tile>
 
-        <mat-grid-tile colspan="2">
+        <mat-grid-tile colspan="1">
           <div class="containercol3" dir="ltr" fxLayoutGap="20px" fxLayoutAlign="start start">
             <mat-form-field class="orderhead">
               <input matInput placeholder="Sender Message" formControlName="DefSendMsg">
             </mat-form-field>
-            <mat-form-field class="orderhead">
+           <!--  <mat-form-field class="orderhead">
               <input matInput placeholder="Delivery Instructions" formControlName="DelInstructions">
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field class="orderhead">
               <input matInput placeholder="InvoiceRef *" formControlName="InvoiceRef">
             </mat-form-field>
-            <mat-form-field class="orderhead">
+            <!-- <mat-form-field class="orderhead">
               <input matInput placeholder="Status" formControlName="Status">
-            </mat-form-field>
+            </mat-form-field> -->
           </div>
         </mat-grid-tile>
 
         <mat-grid-tile colspan="1">
           <div class="containercol4">
             <button mat-raised-button color="primary" [disabled]="!orderform.valid">Save</button>
+            <button mat-raised-button color="accent" style="margin-top:5px;" (click)="onBackButton()">Cancel</button>
           </div>
         </mat-grid-tile>
 
