--- a/src/app/delnote/dellist/dellist.component.html
+++ b/src/app/delnote/dellist/dellist.component.html
@@ -18,18 +18,17 @@
       </mat-grid-tile>
       <mat-grid-tile colspan="3">
         <div style="padding-right: 5px;">Show:</div>
-      <mat-button-toggle-group #dellistFilter="matButtonToggleGroup">
+      <mat-button-toggle-group (change)="onfilter(dellistFilter.value)" #dellistFilter="matButtonToggleGroup" value='All'>
           <mat-button-toggle value="All">
             <div>All</div>
           </mat-button-toggle>
           <mat-button-toggle value="DelNotes">
-            <div>Delivery Notes</div>
+            <div>Pending Del. Notes</div>
           </mat-button-toggle>
           <mat-button-toggle value="Labels">
-            <div>Labels</div>
+            <div>Pending Labels</div>
           </mat-button-toggle>
         </mat-button-toggle-group>
-        <div class="example-selected-value">Selected value: {{dellistFilter.value}}</div>
       </mat-grid-tile>
       <div *ngIf="showRefreshData">
         <mat-grid-tile colspan="1">
