Removed Filter predicate from delnote search. Removed Delivery Date Min Date Validation

--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -22,7 +22,7 @@
           <mat-grid-tile>
             <div class="delnotehead">
               <mat-form-field>
-                <input matInput [matDatepicker]="picker2" [min]="maxDate" placeholder="Delivery Date" formControlName="DelNoteDeliveryDate" required>
+                <input matInput [matDatepicker]="picker2" placeholder="Delivery Date" formControlName="DelNoteDeliveryDate" required>
                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2></mat-datepicker>
               </mat-form-field>
