--- a/src/app/delorder/delorder.component.html
+++ b/src/app/delorder/delorder.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <section class="order-form">
     <form (ngSubmit)="onSave()" [formGroup]="orderform" class="order-form">
-      <mat-grid-list cols="6" rowHeight="200px">
+      <mat-grid-list cols="11" rowHeight="200px">
         <mat-grid-tile colspan="1">
           <div class="containercol1">
             <mat-form-field class="orderhead">
@@ -59,6 +59,39 @@
               <input matInput placeholder="Status" formControlName="Status">
             </mat-form-field> -->
           </div>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="5">
+            <div class="example-container mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+
+                  <!-- Position Column -->
+                  <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef> No. </th>
+                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                  </ng-container>
+
+                  <!-- Name Column -->
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  </ng-container>
+
+                  <!-- Weight Column -->
+                  <ng-container matColumnDef="weight">
+                    <th mat-header-cell *matHeaderCellDef> Weight </th>
+                    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                  </ng-container>
+
+                      <!-- Symbol Column -->
+                  <ng-container matColumnDef="symbol">
+                      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+              </div>
         </mat-grid-tile>
 
         <mat-grid-tile colspan="1">
