--- a/src/app/delorder/delorder.component.html
+++ b/src/app/delorder/delorder.component.html
@@ -65,27 +65,21 @@
                 <table mat-table [dataSource]="dataSource">
 
                   <!-- Position Column -->
-                  <ng-container matColumnDef="position">
-                    <th mat-header-cell *matHeaderCellDef> No. </th>
-                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                  <ng-container matColumnDef="Hamper Code">
+                    <th mat-header-cell *matHeaderCellDef> Hamper Code </th>
+                    <td mat-cell *matCellDef="let element"> {{element.hamperCode}} </td>
                   </ng-container>
 
                   <!-- Name Column -->
-                  <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef> Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  <ng-container matColumnDef="Invoice Qty">
+                    <th mat-header-cell *matHeaderCellDef> Invoice Qty </th>
+                    <td mat-cell *matCellDef="let element"> {{element.eyeselInvQty}} </td>
                   </ng-container>
 
                   <!-- Weight Column -->
-                  <ng-container matColumnDef="weight">
-                    <th mat-header-cell *matHeaderCellDef> Weight </th>
-                    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-                  </ng-container>
-
-                      <!-- Symbol Column -->
-                  <ng-container matColumnDef="symbol">
-                      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                  <ng-container matColumnDef="Delivery Note Qty">
+                    <th mat-header-cell *matHeaderCellDef> Delivery Note Qty </th>
+                    <td mat-cell *matCellDef="let element"> {{element.delNotesQty}} </td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
